@@ -26,7 +26,7 @@ class ReconnectableElementRenderingLivePage(OriginalPage):
     that API.  We should not attempt to keep this working as-is; if you do find
     it in a broken state, just update it to use newer, better documented APIs.
     """
-    jsClass = 'Nevow.Test.ReconnectAcceptanceTest.ReconnectingPage'
+    jsClass = u'Nevow.Test.ReconnectAcceptanceTest.ReconnectingPage'
     def __init__(self, *a, **k):
         """
         Make sure our interface allows the particular method we want to expose.
